moved include for modal to bottom of page to help with z-index issues

--- a/client/src/components/modal/style.scss
+++ b/client/src/components/modal/style.scss
@@ -1,5 +1,5 @@
 /* The Modal (background) */
-.modal {
+.risk-level .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
